# cpp__prak

./: CMakeLists.txt  Makefile  README.md  black.cpp
0/: 00.c  01.cpp  02.cpp  03.cpp
1/: 10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp
2/: 20.cpp  21.cpp  22.cpp  23.cpp  24.cpp
3/: 30.cpp  31.cpp  32.cpp
4/: 40.cpp  41.cpp  42.cpp  43.cpp  44.cpp
5/: 50.cpp  51.cpp  52.cpp  53.cpp  54.cpp  55.cpp  56.cpp
6/: 60.cpp  61.cpp  62.cpp  63.cpp  64.cpp  65.cpp  66.cpp
7/: 70.cpp  71.cpp  72.cpp  73.cpp  74.cpp  75.cpp
8/: 80.cpp  81.cpp  82.cpp  83.cpp  84.cpp
9/: 90.cpp  91.cpp  92.cpp  92_save.cpp  chernovik.cpp
9/92_folder/: 92.cpp  92_cfile.cpp  92_hfile.h  CMakeLists.txt  test_92.cpp
9/93_folder/: CMakeLists.txt  main.cpp  regex_parser.cpp  regex_parser.h  token_stream_iterator.cpp  token_stream_iterator.h
A/: A0.cpp  A1.cpp  A2.cpp  A3.cpp  A4.cpp  A5.cpp  Makefile  save_A1.cpp  test_A1.cpp  test_A3.cpp  test_egor.cpp  token_stream_iterator.cpp  token_stream_iterator.h
B/: B0  Makefile  join.cpp  regex_parser.h
big_corn_regex_progect/: B2.cpp  CMakeLists.txt  delete_bad.cpp  delete_bad.h  delete_empty_rules.cpp  delete_empty_rules.h  global_typedef.cpp  global_typedef.h  grm_production.cpp  grm_production.h  left_grm_to_dfa.cpp  left_grm_to_dfa.h  main.cpp  regex_checker.cpp  regex_checker.h  regex_parser.cpp  regex_parser.h  token_stream_iterator.cpp  token_stream_iterator.h
